# ceo-watchlist

./: .gitignore  CEO_Watchlist_Pitch.pptx  Makefile  README.md  snapshot.csv  watchlist.csv
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
api/app/: db.py  main.py  models.py  schemas.py  watchlist_app.py
api/app/core/: discovery_engine.py
api/app/ingestion/: edgar_13f.py
api/app/routers/: companies.py  edgar.py  signals.py  ui.py  watchlist.py
api/app/sql/: current_ceos.sql  tenure_features.sql
api/app/web/: app.py
data/: tickers.csv
data/bronze/: boardroom_alpha.csv  boardroom_alpha.xlsx  company_metadata.csv  insider_trades.csv  prices_daily.csv  sector_returns_daily.csv
data/gold/: ceo_watchlist.json
data/silver/: boardroom_alpha.json
data/snapshots/: watchlist_2025-10-14T14:21:33Z.csv
infra/: docker-compose.yml
infra/db/: init.sql  patch_13f.sql
scripts/: add_price_features.py  auto_refresh.py  bootstrap_features_inputs.py  build_scores.py  daily_refresh.py  enrich_company_metadata.py  enrich_sector_offline.py  enrich_with_prices.py  export_and_push_gist.py  export_potential_to_gsheet.py  ingest_boardroom_alpha_excel.py  load_13f_tsv_zip.py  load_real_prices.py  load_yf_prices.py  merge_ceo_datasets.py  refresh_features.py  scrape_ceo_changes.py  seed_prices.py  smoke_db.py  smoke_sheet.py  smoke_yf.py  snapshot_watchlist.py  update_insiders.py  update_prices.py
