[project]
name = "ceo-watchlist-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "SQLAlchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",   # optional later; not used in this minimal boot
  "python-dotenv>=1.0.1",
  "pandas>=2.0"
  "openpyxl>=3.1"
]

[tool.uvicorn]
reload = true